<resources>
    <string name="app_name">Mobile</string>
    <string name="log_in_label">Zaloguj się:</string>
    <string name="log_in">Zaloguj się</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Hasło:</string>
    <string name="password_forget_text">Nie pamiętam hasła, przypomnij hasło.</string>
    <string name="no_account_text">Nie masz konta? </string>
    <string name="sign_up_text">Zarejestruj się!</string>
    <string name="sign_up_label">Zarejestruj się:</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="login_required">Login*</string>
    <string name="password_confirm_required">Powtórz hasło*</string>
    <string name="email_required">Email*</string>
    <string name="password_required">Hasło*</string>
    <string name="choose_image_text">Wybierz zdjęcie</string>
    <string name="browse">Przeglądaj</string>
    <string name="filed_required">*-pola wymagane.</string>
    <string name="statute_required">regulaminu*</string>
    <string name="statute_text">Przeczytałem/am i akceptuję warunki </string>
    <string name="go_to_wallet">Przejdź do porfela</string>
    <string name="balance_label">Bilans:</string>
    <string name="number_of_members_label">Liczba członków:</string>
    <string name="owner_label">Właściciel:</string>
    <string name="logout">Wyloguj się</string>
    <string name="hello">Witaj</string>
    <string name="add_new_wallet">Dodaj nowy portfel</string>
    <string name="description_label">Opis:</string>
    <string name="your_expanses_label">Twoje wydatki:</string>
    <string name="expanses_label">Wydatki:</string>
    <string name="statistics">Statystyki</string>
    <string name="delete_wallet">Usuń portfel</string>
    <string name="shop_lists">Listy zakupów</string>
    <string name="expenses">Wydatki</string>
    <string name="members">Członkowie</string>
    <string name="open_chat">Otwórz czat</string>
    <string name="create">Utwórz</string>
    <string name="edit_members_list">Edytuj listę członków</string>
    <string name="add_wallet_label">Dodaj portfel:</string>
    <string name="category_label">Kategoria:</string>
    <string name="description_hint">Wpisz opis...</string>
    <string name="name_hint">Wpisz nazwę...</string>
    <string name="login_label">Login:</string>
    <string name="numer_of_wallets_label">Liczba portfeli:</string>
    <string name="edit_profile">Edytuj profil</string>
    <string name="edit_profile_label">Edytuj profil:</string>
    <string name="notifications">Powiadomienia</string>
    <string name="deny">Odrzuć</string>
    <string name="accept">Zaakceptuj</string>
    <string name="go_to_expense">Przejdź do wydatku</string>
    <string name="debt">Wysokość należności:</string>
    <string name="find_user_hint">Szukaj użytkowników...</string>
    <string name="go_to_statue">Przejdź do regulaminu</string>
    <string name="profil">Profil</string>
    <string name="warning_info_text">Użytkownik przypomina Ci o uregulowaniu należności</string>
    <string name="warning_debth">NIEUREGULOWANA NALEŻNOŚĆ</string>
    <string name="change_password">Zmień hasło</string>
    <string name="delete_account">Usuń konto</string>
    <string name="save_changes">Zapisz zmiany</string>
    <string name="statue_label">Regulamin:</string>
    <string name="statue_text_1">1. Bla bla</string>
    <string name="statue_text_2">2. Bla bla</string>
    <string name="statue_text_3">3. Bla bla</string>
    <string name="statue_text_4">4. Bla bla</string>
    <string name="insert_old_password_label">Podaj aktualne hasło:</string>
    <string name="insert_new_password_label">Podaj nowe hasło: </string>
    <string name="repeat_new_password_label">Powtórz nowe hasło: </string>
    <string name="add_members_label">Dodaj osoby: </string>
    <string name="send_invitations">Wyślij zaproszenia</string>
    <string name="edit_wallet">Edytuj portfel</string>
    <string name="edit_wallet_label">Edytuj portfel:</string>
    <string name="create_list_label">Utwórz listę:</string>
    <string name="create_list">Utwórz listę</string>
    <string name="added_product_label">Dodane produkty:</string>
    <string name="add_product_to_list_label">Dodaj produkty do listy:</string>
    <string name="quantity_hint">Wpisz ilość...</string>
    <string name="add">Dodaj</string>
    <string name="go_to_list">Przejdź do listy</string>
    <string name="number_of_elements_label">Liczba pozycji:</string>
    <string name="see_details">Zobacz szczegóły</string>
    <string name="edit_list_label">Edytuj listę:</string>
    <string name="enter_message">Napisz wiadomość...</string>
    <string name="add_expense_label">Dodaj wydatek:</string>
    <string name="period_label">Cykliczność:</string>
    <string name="expense_users_label">Kogo dotyczy wydatek:</string>
    <string name="cancel">Anuluj</string>
    <string name="edit_members_label">Edytuj członków:</string>
    <string name="send_invitations_to_wallet">Zaproś do portfela</string>
    <string name="delete_members_label">Usuwanie osoby z portfela</string>
    <string name="warning">Uwaga ten proces jest nieodwracalny</string>
    <string name="delete_members_question_label">Czy na pewno chcesz usunać członka portfela?</string>
    <string name="yes_delete">Tak - usuń</string>
    <string name="no_exit">Nie - zabierz mnie stąd</string>
    <string name="delete_account_label">Usuwanie konta</string>
    <string name="delete_account_question_label">Czy na pewno chcesz usunąć konto?</string>
    <string name="password_hint">Podaj hasło...</string>
    <string name="baner_label">Kotrolowanie wydatków jeszcze nigdy nie było takie proste</string>
    <string name="insert_email_label">Podaj adres email:</string>
    <string name="restore_password_label">Odzyskiwanie hasła:</string>
    <string name="restore_password">Przypomnij hasło</string>
    <string name="edit_expense">Edytuj wydatek</string>
    <string name="edit_expense_label">Edytuj wydatek</string>
    <string name="owner_expense_label">Wykonany przez:</string>
    <string name="period_expense_label">Cykliczność:</string>
    <string name="cost_expense_label">"Koszt: "</string>
    <string name="delete_expense">Usuń wydatek</string>
    <string name="back">Wróć</string>
    <string name="biggest_expense_label">Najwięcej wydali:</string>
    <string name="all_expenses_label">Łącznie wydano:</string>
    <string name="change_password_label">Zmień hasło:</string>
    <string name="cost_hint">Wpisz koszt...</string>
    <string name="who_make_label">Wykonany przez: </string>
    <string name="cost_label">Koszt: </string>
    <string name="date_label">Data:</string>
    <string name="regulate">UREGULUJ</string>
    <string name="all_balance_label">Wydatki: </string>
    <string name="your_balance_label">Twój bilans:</string>
    <string name="delete_notification">Usuń przypomnienie</string>
    <string name="leave_wallet">Opuść portfel</string>
    <string name="save_photo">Zmień zdjęcie</string>
    <string name="new_debt_notification">Masz nowy dług!</string>
    <string name="day">Dzień</string>
    <string name="month">Miesiąc</string>
    <string name="year">Rok</string>
    <string name="from_label">Od:</string>
    <string name="to_label">Do:</string>
    <string name="show_statistics">Pokaż statystyki</string>
    <string name="receipt_photo">Zdjęcie paragonu:</string>
    <string name="delete_image">Usuń zdjęcie</string>
    <string name="wallets">Portfele</string>
    <string name="delete_notification2">Usuń powiadomienie</string>
    <string name="new_message">Nowa wiadomość</string>

</resources>