<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/edit_profile_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/edit_profile_label"
                android:textAppearance="@style/simple_label"
                android:textSize="40sp" />

            <View
                android:id="@+id/vector_1"
                android:layout_width="156dp"
                android:layout_height="15dp"
                android:layout_below="@+id/edit_profile_label"
                android:layout_alignEnd="@+id/edit_profile_label"
                android:layout_marginStart="50dp"
                android:layout_marginTop="-10dp"
                android:background="@drawable/v_underline" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/choose_image_text"
            android:textAppearance="@style/simple_label_bold"
            android:textSize="24sp" />

        <Button
            android:id="@+id/choose_image_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"

            android:background="@drawable/et_edittext"
            android:drawableStart="@drawable/ic_image"
            android:paddingStart="20dp"
            android:text="@string/browse"
            android:textAppearance="@style/simple_button"
            android:textColor="@color/gray"
            app:backgroundTint="@null"
            tools:ignore="RtlSymmetry" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/new_profile_image_iv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <Button
            android:id="@+id/save_change_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_simple"
            android:text="@string/save_photo"
            android:textAppearance="@style/simple_button"
            android:textColor="@color/light_gray"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/delete_image_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/btn_simple"
            android:text="@string/delete_image"
            android:textAppearance="@style/simple_button"
            android:textColor="@color/light_gray"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/change_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_simple"
            android:text="@string/change_password"
            android:textAppearance="@style/simple_button"
            android:textColor="@color/light_gray"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/delete_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/btn_simple"
            android:text="@string/delete_account"
            android:textAppearance="@style/simple_button"
            android:textColor="@color/light_gray"
            app:backgroundTint="@null" />

    </LinearLayout>

</ScrollView>
