<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/edit_members_label"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_members_label"
                android:textAppearance="@style/simple_label"
                android:textSize="36sp"
                android:layout_alignParentStart="true" />

            <View
                android:id="@+id/vector"
                android:layout_width="156dp"
                android:layout_height="15dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="50dp"
                android:layout_below="@+id/edit_members_label"
                android:layout_alignEnd="@+id/edit_members_label"
                android:background="@drawable/v_underline" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/delete_members_question_label"
                android:textAppearance="@style/simple_label_bold"
                android:textSize="30sp"
                android:textColor="@color/light_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/warning"
                android:textAppearance="@style/simple_label_bold"
                android:textSize="24sp"
                android:layout_marginVertical="20dp"
                android:textColor="@color/yellow" />

            <Button
                android:id="@+id/delete_member_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_simple"
                android:text="@string/yes_delete"
                android:layout_marginBottom="20dp"
                android:textAppearance="@style/simple_button" />

            <Button
                android:id="@+id/cancel_member_delete_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_danger"
                android:text="@string/no_exit"
                android:layout_marginBottom="10dp"
                android:textAppearance="@style/simple_button" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>